[Feature-21-system-events] Fix code smells. Add integration test for get system events list. Add missing test for get resource by id. Add assertions to all test cases that log events.